--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Rock Paper Scissors</title>
 </head>
-<body>
-    <a href="game.html">Click to begin</a>
+<body id="indexBody">
+    <img id="prs" src="images/prs.jpg">
+    <a id="startLink" href="game.html">Click to play!</a>
 </body>
    
